--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
     @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0.2; } }
     
     @media (max-width: 450px) { .mini-player { flex-direction: column; text-align: center; } .info { align-items: center; } }
+
+  .credit {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  font-size: 12px;
+  font-style: italic;
+  color: rgba(255,255,255,0.6);
+  z-index: 999;
+  pointer-events: none; /* supaya tidak mengganggu klik */
+}
+                   
 </style>
 </head>
 <body>
@@ -132,6 +144,7 @@
     </div>
     <audio id="audio" src="https://stream.zeno.fm/d2k0ptw4kkeuv" crossorigin="anonymous"></audio>
 </div>
+  <div class="credit">prepared by Juneid</div>
 
 <script>
     const audio = document.getElementById('audio');
