Update station name from 'SUARA EKARINDAH' to 'SUARA MEKARINDAH'

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
     </div>
     <div class="info">
-        <div class="station-name">SUARA EKARINDAH</div>
+        <div class="station-name">SUARA MEKARINDAH</div>
         <div class="artist" id="artist">Connecting...</div>
         <div class="title-wrap"><div class="title" id="title">Streaming Mode</div></div>
         <div class="controls">
