--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
         </div>
     </div>
-    <audio id="audio" src="https://stream.zeno.fm/d2k0ptw4kkeuv" crossorigin="anonymous"></audio>
+    <audio id="audio" src="https://stream.zeno.fm/d2k0ptw4kkeuv/;" crossorigin="anonymous"></audio>
 </div>
   <div class="credit">prepared by Juneid</div>
 
