Update audio source URL in index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
         </div>
     </div>
-    <audio id="audio" src="https://stream.zeno.fm/d2k0ptw4kkeuv/;" crossorigin="anonymous"></audio>
+    <audio id="audio" src="https://stream-154.zeno.fm/d2k0ptw4kkeuv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiJkMmswcHR3NGtrZXV2IiwiaG9zdCI6InN0cmVhbS0xNTQuemVuby5mbSIsInJ0dGwiOjUsImp0aSI6IktmSHBkaVJ5U2VTcWRRUm44SG1iM1EiLCJpYXQiOjE3Njg2MTE0MjEsImV4cCI6MTc2ODYxMTQ4MX0.skETtFj3iYRFgudCCxiB1pTmLKwLeCP0c-QWB7t0Fnw/;" crossorigin="anonymous"></audio>
 </div>
 
 <script>
