--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <style>
     :root { 
-        --v-size: 160px; 
+        --v-size: 140px; 
         --neon: #ff006e; 
         --neon-blue: #00f2ff;
         --ungu-tua: #1e1b4b;
@@ -54,7 +54,7 @@
     .vinyl {
         width: 100%; height: 100%; border-radius: 50%;
         /* Gradasi dibuat lebih dalam/tua */
-        background: radial-gradient(circle, #a78bfa 0%, var(--vinyl-purple) 45%, #4c1d95 100%), 
+        background: radial-gradient(circle, #4f176e 0%, var(--vinyl-purple) 25%, #310940 100%), 
                     repeating-radial-gradient(circle, transparent 0, transparent 2px, rgba(0,0,0,0.15) 3px, transparent 4px);
         animation: spin 12s linear infinite; animation-play-state: paused;
         position: relative; z-index: 1;
@@ -118,7 +118,7 @@
             </div>
         </div>
     </div>
-    <audio id="audio" src="https://stream.zeno.fm/d2k0ptw4kkeuv" crossorigin="anonymous"></audio>
+    <audio id="audio" src="https://stream.zeno.fm/gkvbmtw4kkeuv/source" crossorigin="anonymous"></audio>
 </div>
 
 <script>
@@ -132,10 +132,15 @@
     const defaultCover = "https://mekarindah.netlify.app/img/default.jpg";
 
     const RECITER_COVERS = {
-        'mishary': 'https://i.ytimg.com/vi/GLMp_EGGLfk/hq720.jpg',
-        'abdul': 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT99qAcwhSDEUMmxHHzjEfna9YVgtg-04A8rDvXbaNtZf-70ZkRxFPl_i5J_he-DnfdtO7EhS0ouUaiu-hq_bE8Ni9U3xKBjsAdFgzAg4w&s=10',
-        'adi hidayat': 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQi7cw0cL0cs4aqyXA5sbBMBaCWGmW0D28pzruJKEWXlx9RYeQLuZouy9VlqLk9oWvOxlO7jHAh6QOXhjPyKPQZqz2rez4YV5XOPrgTTQ&s=10',
-        'ali jaber': 'https://mekarindah.netlify.app/img/alijaber.jpg' 
+            'mishary': 'https://i.ytimg.com/vi/GLMp_EGGLfk/hq720.jpg?sqp=-oaymwExCK4FEIIDSFryq4qpAyMIARUAAIhCGAHwAQH4AdQGgALgA4oCDAgAEAEYciBWKDgwDw==&rs=AOn4CLAa_DZgLB8D4xcMTFPgxpnQghg_sw',
+            'abdul': 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT99qAcwhSDEUMmxHHzjEfna9YVgtg-04A8rDvXbaNtZf-70ZkRxFPl_i5J_he-DnfdtO7EhS0ouUaiu-hq_bE8Ni9U3xKBjsAdFgzAg4w&s=10',
+            'adi hidayat': 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQi7cw0cL0cs4aqyXA5sbBMBaCWGmW0D28pzruJKEWXlx9RYeQLuZouy9VlqLk9oWvOxlO7jHAh6QOXhjPyKPQZqz2rez4YV5XOPrgTTQ&s=10',
+            'zainuddin': 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSDo4WarU6dxMHRx3BFqisexu4euGqv9Ni9_JZA5jZBwA&s=10',
+            'latif': 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSgeut2z_VzZzl5_B7sbcdxL2FkG3Rd3dOTaS3WCOXEA&s=10',
+            'al sudais': 'https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Abdulrahman_Al-Sudais.jpg/440px-Abdulrahman_Al-Sudais.jpg',
+            'ghamdi': 'https://i.ibb.co/Wp0y1hG/ghamdi.jpg',
+            'shatri': 'https://i.ibb.co/fQ5N204/shatri.jpg',
+            'abdul basit': 'https://i.ibb.co/RzM805h/abdulbasit.jpg'
     };
 
     playBtn.onclick = () => {
